# webstory

./: README.md  README.rst  pyproject.toml
story/dir_over_net/: README.md  requests.txt  story.py
story/file_over_network/: README.md  story.py
story/site_generators/: README.md
story/static_sites/: generate.py
story/static_sites/src/: index.html
story/the_http_protocol/: README.md
story/webserver/: README.md  server.py
